--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       mode: replicated
       replicas: 1
 
-  autnentication-service:
+  authentication-service:
     build:
       context: ./../authentication-service
       dockerfile: ./../authentication-service/authentication-service.dockerfile
