--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -38,3 +38,14 @@ services:
       POSTGRES_DB: users
     volumes:
       - ./db-data/postgres:/var/lib/postgresql/data
+
+  mongo:
+    image: mongo:6.0.20-rc3-jammy
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_DATABASE: logs
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - ./db-data/mongo:/data/db
