35. Update the front end to post to the logger, via the broker

--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - ./db-data/postgres:/var/lib/postgresql/data
 
   mongo:
-    image: mongo:6.0.20-rc3-jammy
+    image: mongo:6.0.19-jammy
     ports:
       - "27017:27017"
     environment:
