43. Challenge: Adding the Mail service to docker-compose.yml and the Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ broker-service/brokerApp
 front-end/frontApp
 authentication-service/authApp
 logger-service/loggerApp
+mail-service/mailApp
 project/db-data
