--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -33,6 +33,17 @@ services:
     environment:
       GOMICRO_AUTH_DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
 
+  mail-service:
+    build:
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    ports:
+      - "8082:80"
+    deploy:
+      mode: replicated
+      replicas: 1
+
   postgres:
     image: postgres:16.2
     ports:
