--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -76,6 +76,16 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: password
     volumes:
       - ./db-data/mongo:/data/db
+      
+  rabbitmq:
+    image: rabbitmq:4.0.5-alpine
+    ports:
+      - "5672:5672"
+    deploy:
+      mode: replicated
+      replicas: 1
+    volumes:
+      - ./db-data/rabbitmq/:/var/lib/rabbitmq/
   
   mailhog:
     image: 'mailhog/mailhog:latest'
