--- a/project/swarm.yml
+++ b/project/swarm.yml
@@ -1,6 +1,19 @@
 version: '3'
 
 services:
+  
+  caddy:
+    image: alexanderlevinson70/micro-caddy:1.0.0
+    deploy:
+      mode: replicated
+      replicas: 1
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - caddy_data:/data
+      - caddy_config:/config
+
   front-end:
     image: alexanderlevinson70/front-end-service:1.0.0
     deploy:
@@ -14,7 +27,7 @@ services:
       replicas: 1
 
   listener-service:
-    image: alexanderlevinson70/listener-service:1.0.1
+    image: alexanderlevinson70/listener-service:1.0.0
     deploy:
       mode: replicated
       replicas: 1
@@ -28,7 +41,7 @@ services:
       GOMICRO_AUTH_DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
 
   logger-service:
-    image: alexanderlevinson70/logger-service:1.0.0
+    image: alexanderlevinson70/logger-service:1.0.1
     deploy:
       mode: replicated
       replicas: 1
@@ -90,3 +103,9 @@ services:
       POSTGRES_DB: users
     volumes:
       - ./db-data/postgres:/var/lib/postgresql/data
+
+
+volumes:
+  caddy_data:
+    external: true
+  caddy_config:
