--- a/project/swarm.yml
+++ b/project/swarm.yml
@@ -15,10 +15,12 @@ services:
       - caddy_config:/config
 
   front-end:
-    image: alexanderlevinson70/front-end-service:1.0.0
+    image: alexanderlevinson70/front-end-service:1.0.2
     deploy:
       mode: replicated
       replicas: 1
+    environment:
+      GO_MICRO_BROKER_URL: "http://backend"
 
   broker-service:
     image: alexanderlevinson70/brocker-service:1.0.1
